--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-frontend",
+  "homepage": "https://nishant825.github.io/react-frontend/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,7 @@
     "serve": "npm run serve",
     "dev": "vite",
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "deploy" : "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
