--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://nishant825.github.io/react-frontend",
   "name": "react-frontend",
-  "homepage": "https://nishant825.github.io/react-frontend/",
   "private": false,
   "version": "0.0.0",
   "type": "module",
